[gd_scene load_steps=3 format=3 uid="uid://bqxvhqxqxqxqx"]

[ext_resource type="Script" path="res://scripts/menu_scripts/settings.gd" id="1_0x0x0"]
[ext_resource type="Theme" uid="uid://bqxvhqxqxqxqx" path="res://assets/fantasy_pixelart_ui/theme.tres" id="2_0x0x0"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x0x0")
theme = ExtResource("2_0x0x0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.4, 0.8, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 50.0

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX Volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 50.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Show Controls"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
